# gtsam-range-aided-slam

./: .gitignore  .pre-commit-config.yaml  README.md  gurobi_conda_export.yml  notes.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  mypy.yml
data/1000_timesteps/test_0/: factor_graph.fg
data/1000_timesteps/test_1/: factor_graph.fg
data/1000_timesteps/test_2/: factor_graph.fg  params.json
data/1000_timesteps/test_3/: factor_graph.fg
examples/: example.py  example_extract_tum.py  example_odometry.py  example_utils.py  solve_problems.py  solve_problems_gtsam.py  solve_problems_gurobi.py  solve_problems_snopt.py  traj.tum  traj_A.tum  traj_B.tum  traj_C.tum
ra_slam/: solution_to_tum.py  solve_mle_gtsam.py
ra_slam/custom_factors/: PoseToPointFactor.py  SESyncFactor2d.h  SESyncFactor2d.py  SESyncFactor3d.cpp  SESyncFactor3d.py  gtsam_pgo.h  sampling.cpp  sampling.h
ra_slam/utils/: gtsam_utils.py  plot_utils.py  solver_utils.py
ro_slam/: get_score_solution.py  gtsam_playground.py  gurobi_utils.py  mle.py  pyfg_to_tum.py  qcqp_utils.py  solution_to_tum.py  solve_mle_gtsam.py  solve_mle_qcqp.py  utils.py
ro_slam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ro_slam/custom_factors/: SESyncFactor2d.cpp  SESyncFactor2d.py  SESyncFactor3d.h  SESyncFactor3d.py  example.py  gtsam_pgo.cpp
ro_slam/factor_graph/: factor_graph.py  parse_factor_graph.py
ro_slam/qcqp/: qcqp.py  settings.py
ro_slam/utils/: circle_utils.py  drake_utils.py  eval_utils.py  gtsam_utils.py  matrix_utils.py  plot_utils.py  qcqp_utils.py  solver_utils.py
(+50 files in other folders)
