[options]
install_requires = attrs==22.1.0
packages = find:

[metadata]
name = ro_slam
version = 0.1.0
description = A python range-only SLAM library
author = Alan Papalia
author_email = apapalia@mit.edu
url = https://github.com/MarineRoboticsGroup/qcqp-range-only-slam
classifiers =
    Typing :: Typed

[options.packages.find]
exclude = examples*

[options.package_data]
py_factor_graph = py.typed
