[options]
install_requires=
    attrs
    gtsam

packages = find:

[metadata]
name = ra_slam
version = 0.1.0
description = A python range-aided SLAM library
author = Alan Papalia
author_email = apapalia@mit.edu
url = https://github.com/MarineRoboticsGroup/gtsam-range-aided-slam
classifiers =
    Typing :: Typed

[options.packages.find]
exclude = examples*

[options.package_data]
py_factor_graph = py.typed
